--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
   text-decoration-line: none;
   color: black;
 }
-a:hover {
+a:hover,section p:hover {
   color: #0065fc;
 }
 header .fa {
@@ -47,6 +47,7 @@ header h3 {
 strong {
   font-weight: bold;
 }
+
 
 /*Header*/
 #logo {
@@ -269,6 +270,7 @@ article span {
   box-shadow: 5px 5px #f2f2f2;
   margin: 10px 10px 10px 10px;
 }
+
 .fort img {
   height: 200px;
   width: 300px;
@@ -277,6 +279,7 @@ article span {
   box-shadow: 5px 5px #f2f2f2;
   margin: 10px 10px 10px 10px;
 }
+
 .iles img {
   height: 100px;
   width: 300px;
@@ -309,8 +312,27 @@ article span {
   box-shadow: 5px 5px #f2f2f2;
   margin: 10px 10px 10px 10px;
 }
-
-/*foot*/
+.activités{
+  position: relative;
+}
+.activités h4{
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  font-weight: bolder;
+}
+.grande{
+  position: relative;
+}
+.grande h4{
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  font-weight: bolder;
+}
+/*foot{*/
 
 footer {
   background-color: #f2f2f2;
