--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,8 @@
 }
 body {
   font-family: "Raleway-Regular", Arial, Helvetica, sans-serif;
-}
-#bloc-page {
-  margin: auto;
+  margin: 20px 20px 20px 20px;
+  padding:0px 30px 0px 30px;
 }
 p {
   color: black;
@@ -18,7 +17,9 @@ a {
   text-decoration-line: none;
   color: black;
 }
-a:hover,section p:hover {
+
+a:hover,
+section p:hover {
   color: #0065fc;
 }
 header .fa {
@@ -29,16 +30,20 @@ header .fa {
   border-radius: 50%;
 }
 .fa {
-  color: #0065fc;
+  color:#0065fc;
+  font-size: 0.7em;
 }
 .empty {
   color: #f2f2f2;
+  font-size: 0.7em;
 }
 h3 {
   font-weight: bold;
   color: black;
   margin-top: 30px;
-  padding-left: 10px;
+  margin-bottom: 10px;
+  padding-left: 15px;
+  font-size: 1.4em;
 }
 header h3 {
   margin-top: 40px;
@@ -48,8 +53,10 @@ strong {
   font-weight: bold;
 }
 
-
 /*Header*/
+header{
+  margin: 20px 20px 20px 20px;
+}
 #logo {
   float: left;
   margin-top: 20px;
@@ -59,9 +66,7 @@ strong {
   justify-content: space-around;
   flex-direction: row;
   text-align: right;
-  margin-left: 1000px;
-  margin-top: 0px;
-  margin-right: 40px;
+  margin-left: 900px;
   color: #0065fc;
   font-weight: bold;
   background-color: white;
@@ -152,29 +157,32 @@ section {
   justify-content: space-between;
   flex-flow: row wrap;
   align-items: center;
-  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 #hébergements {
   background-color: #f2f2f2;
   height: 600px;
-  width: 700px;
+  width: 800px;
   border-radius: 20px;
-  margin: 5px 5px 5px 5px;
-  padding: 10px 30px 10px 30px;
+  padding: 30px 30px 30px 30px;
+  margin-right: 30px;
 }
 .héberg {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .hotel img {
-  width: 200px;
-  height: 100px;
+  width: 230px;
+  height: 110px;
   border: solid 5px white;
   border-bottom: solid 80px white;
   border-radius: 20px;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .hotel:nth-child(1) {
   order: 4;
@@ -208,14 +216,19 @@ article {
 article span {
   position: absolute;
   bottom: 0;
-  padding-bottom: 40px;
+  padding-bottom: 50px;
 }
 
 .entete {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  padding-left: 25px;
+  padding-right: 30px;
+}
+.entete .fas {
+  font-size: 1.5em;
 }
 #populaires {
   background-color: #f2f2f2;
@@ -223,7 +236,7 @@ article span {
   width: 450px;
   border-radius: 20px;
   margin: 5px 5px 5px 5px;
-  padding: 10px 10px 10px 10px;
+  padding: 30px 10px 30px 10px;
   margin-top: 0px;
 }
 .populaire img {
@@ -232,9 +245,9 @@ article span {
   border: solid 5px white;
   border-right: solid 250px white;
   border-radius: 20px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 20px;
 }
 .populaire {
   display: flex;
@@ -248,88 +261,86 @@ article span {
   position: absolute;
   top: 0;
   padding-left: 200px;
-  padding-top: 5px;
+  padding-top: 20px;
 }
 
 /*revoir mise en page- taille image*/
 
 #activités {
-  height: auto;
-  width: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  height: 550px;
+  height: 500px;
+  width: auto;
 }
 .port img {
-  height: 450px;
-  width: 400px;
+  height: 400px;
+  width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 20px 20px;
 }
 
 .fort img {
-  height: 200px;
+  height: 170px;
   width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 0px 20px;
 }
 
 .iles img {
-  height: 100px;
+  height: 140px;
   width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 0px 20px;
 }
 .calanques img {
-  height: 450px;
-  width: 400px;
+  height: 400px;
+  width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 0px 20px;
 }
 .dame img {
-  height: 150px;
+  height: 140px;
   width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 0px 20px;
 }
 .longchamps img {
-  height: 150px;
+  height: 170px;
   width: 300px;
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 22px 0px 20px;
 }
-.activités{
+.petite {
   position: relative;
 }
-.activités h4{
+.petite h4 {
   position: absolute;
   bottom: 0;
-  padding-bottom: 10px;
-  padding-left: 30px;
+  padding-left: 35px;
   font-weight: bolder;
 }
-.grande{
+.grande {
   position: relative;
 }
-.grande h4{
+.grande h4 {
   position: absolute;
   bottom: 0;
   padding-bottom: 30px;
-  padding-left: 30px;
+  padding-left: 35px;
   font-weight: bolder;
 }
 /*foot{*/
