--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*Général*/
-body{
-  font-family:'Raleway', sans-serif;
+body {
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: normal;
 }
@@ -8,6 +8,7 @@ body{
 body {
   font-family: "Raleway-Regular", Arial, Helvetica, sans-serif;
   margin: auto;
+  height: auto;
 }
 p {
   color: black;
@@ -39,26 +40,26 @@ h3 {
   font-size: 1.4em;
 }
 header h3 {
-  margin-top: 40px;
+  margin-top: 30px;
   padding-left: 0px;
 }
 strong {
   font-weight: bold;
 }
 
-img{
-  object-fit:cover;
+img {
+  object-fit: cover;
 }
 
 /*Header*/
 header {
   margin: 10px 80px 0px 80px;
 }
-.haut{
+.haut {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end
+  align-items: flex-end;
 }
 .menu {
   display: flex;
@@ -68,7 +69,7 @@ header {
   color: #0065fc;
   background-color: white;
 }
-.menu a{
+.menu a {
   margin-left: 50px;
   margin-right: 20px;
 }
@@ -80,56 +81,43 @@ header {
   color: #0065fc;
   font-weight: bold;
 }
-#info {
-  color: #0065fc;
-  background-color: white;
-  border: solid 1px lightgrey;
-  border-radius: 50%;
-  padding: 7px 9px 7px 9px;
-  font-size: 0.6em;
-  margin-right: 10px;
-}
-.inf {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
+
 form {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  justify-content: flex-start;
-}
-#bouton {
-  background-color: #0065fc;
-  color: white;
-  border-radius: 0px 10px 10px 0px;
-  border: none;
-  padding: 10px 10px 10px 10px;
-  margin-left: 0%;
-  margin-right: 0%;
-}
-input {
-  padding: 10px 10px 10px 10px;
-  border: 1px #f2f2f2;
-  font-size: 1em;
-  border: solid 1px #f2f2f2;
 }
 form i {
   background-color: #f2f2f2;
   border-radius: 10px 0px 0px 10px;
-  padding: 12px 12px 12px 12px;
+  padding: 17px 17px 17px 17px;
 }
+input {
+  padding: 15px 15px 15px 15px;
+  border: 1px #f2f2f2;
+  font-size: 1em;
+  border: solid 1px #f2f2f2;
+}
+
 #clic {
   border: solid 1px #f2f2f2;
   font-weight: bold;
   border-left: none;
   border-right: none;
 }
+#bouton {
+  background-color: #0065fc;
+  color: white;
+  border-radius: 0px 10px 10px 0px;
+  border: none;
+  padding: 15px 15px 15px 15px;
+  margin-left: 0%;
+  margin-right: 0%;
+}
+
 header p span {
   border: solid 2px #f2f2f2;
   border-radius: 50px;
-  padding: 7.5px 7.5px 7.5px 7.5px;
+  padding: 13px 15px 13px 15px;
   padding-left: 0px;
   border-left: solid 1px #deebff;
   margin: 10px;
@@ -152,9 +140,25 @@ section span strong {
 header .fa {
   color: #0065fc;
   font-size: 1em;
-  border: solid 10px #deebff;
+  border: solid 16px #deebff;
   background-color: #deebff;
   border-radius: 50%;
+  padding-left: 0;
+  margin-left: 0;
+}
+#info {
+  color: #0065fc;
+  background-color: white;
+  border: solid 1px lightgrey;
+  border-radius: 50%;
+  padding: 7px 9px 7px 9px;
+  font-size: 0.6em;
+  margin-right: 10px;
+}
+.inf {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 /*Body- Hébergements*/
@@ -176,6 +180,7 @@ section {
   padding: 30px 30px 30px 30px;
   margin-right: 30px;
   margin-left: 20px;
+  margin-bottom: 30px;
 }
 .héberg {
   display: flex;
@@ -184,6 +189,9 @@ section {
   justify-content: space-between;
   padding-left: 10px;
   padding-right: 10px;
+}
+section h3 {
+  margin-top: 20px;
 }
 .hotel img {
   width: 230px;
@@ -219,6 +227,7 @@ section {
   bottom: 0;
   padding: 10px 0px 0px 10px;
 }
+
 article {
   position: relative;
 }
@@ -234,7 +243,7 @@ article span {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  padding-left: 30px;
+  padding-left: 15px;
   padding-right: 30px;
 }
 .entete .fas {
@@ -246,8 +255,9 @@ article span {
   width: 400px;
   border-radius: 20px;
   margin: 5px 5px 5px 5px;
-  padding: 30px 10px 30px 10px;
+  padding: 30px 20px 30px 20px;
   margin-top: 0px;
+  margin-bottom: 30px;
 }
 .populaire img {
   height: 130px;
@@ -368,16 +378,243 @@ footer {
   padding: 30px 30px 30px 30px;
 }
 
+/*revoir*/
 
+@media screen and (max-width: 991px) {
+  body {
+    margin: auto;
+    height: auto;
+    width: auto;
+  }
+  header {
+    margin: 50px 150px 50px 150px;
+  }
+  /*revoir*/
+  .haut {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .menu {
+    display: flex;
+    flex-flow: column wrap-reverse;
+    align-content: flex-end;
+    color: #0065fc;
+    background-color: white;
+    font-size: em;
+  }
+  /**/
+  .ancre:hover {
+    border-bottom: solid #0065fc;
+    border-top: none;
+    background-color: white;
+  }
+  .ancre {
+    border-bottom: solid#f2f2f2;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-right: 0px;
+  }
+  .inscription {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+  }
+  /*mettre loupe seulement*/
+  #bouton {
+    background-color: #0065fc;
+    color: white;
+    border-radius: 0px 10px 10px 0px;
+    border: none;
+    padding: 10px 10px 10px 10px;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
 
+  /*body*/
+  section {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: auto;
+  }
 
-@media (min-width:991px) and (max-width:768px){
-  
+  /*Populaires*/
+  .entete {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .entete .fas {
+    font-size: 2em;
+  }
+  h3 {
+    font-size: 2em;
+  }
+  #populaires {
+    height: auto;
+    width: auto;
+    border-radius: 0px;
+  }
+  .populaire img {
+    height: 200px;
+    width: 200px;
+    border: solid 10px white;
+    border-right: solid 300px white;
+    border-radius: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    box-shadow: solid 5px #6e6e70;
+  }
+  .populaire {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin-bottom: 20px;
+  }
+  .populaire p {
+    position: absolute;
+    top: 0;
+    padding-left: 250px;
+    padding-top: 20px;
+    font-size: 1.5em;
+  }
+
+  /*hébergements*/
+  .héberg {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+    width: auto;
+  }
+  .hotel img {
+    height: 300px;
+    width: 600px;
+    border: solid 5px white;
+    border-bottom: solid 90px white;
+    box-shadow: 5px 5px 5px #f2f2f2;
+    margin-top: 20px;
+    margin: auto;
+  }
+  #hébergements {
+    background-color: white;
+    margin: auto;
+    height: auto;
+  }
+
+  .hotel {
+    position: relative;
+  }
+  .hotel p {
+    font-size: 1.2em;
+    position: absolute;
+    bottom: 0;
+    padding: 10px 0px 0px 30px;
+  }
+  article {
+    position: relative;
+  }
+  article span {
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 50px;
+  }
+  /*Activités*/
+  #activités {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: auto;
+    width: auto;
+  }
+  .port img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+
+  .fort img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+
+  .iles img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+  .calanques img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+  .dame img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+  .longchamps img {
+    height: 300px;
+    width: 600px;
+    border-bottom: solid 70px white;
+    box-shadow: 5px 5px #f2f2f2;
+    margin: auto;
+  }
+
+  .petite {
+    position: relative;
+  }
+  .petite h4 {
+    position: absolute;
+    bottom: 0;
+    padding-left: 35px;
+    font-weight: bolder;
+    padding-bottom: 5px;
+  }
+  .grande {
+    position: relative;
+  }
+  .grande h4 {
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 10px;
+    padding-left: 35px;
+    font-weight: bolder;
+  }
+  /*foot{*/
+
+  footer {
+    background-color: #f2f2f2;
+  }
+  footer p {
+    font-weight: bold;
+  }
+  footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: baseline;
+    padding: 30px 30px 30px 30px;
+    margin: auto;
+    height: auto;
+  }
 }
-  
-@media all and (min-width: 991pxpx) {
- 
- 
-  
-}
-
