--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*Général*/
-body {
+#bloc_paage {
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -59,15 +59,12 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-direction: row;
-  color: #0065fc;
-  background-color: white;
 }
 .menu a {
   margin-left: 50px;
@@ -75,7 +72,7 @@ header {
 }
 .ancre:hover {
   border-top: solid #0065fc;
-  background-color: white;
+  color: #0065fc;
 }
 .inscription {
   color: #0065fc;
@@ -91,19 +88,15 @@ form i {
   border-radius: 10px 0px 0px 10px;
   padding: 17px 17px 17px 17px;
 }
-input {
-  padding: 15px 15px 15px 15px;
-  border: 1px #f2f2f2;
-  font-size: 1em;
-  border: solid 1px #f2f2f2;
-}
-
 #clic {
   border: solid 1px #f2f2f2;
-  font-weight: bold;
   border-left: none;
   border-right: none;
+  padding: 15px 15px 15px 15px;
+  font-size: 1em;
+  font-weight: bold;
 }
+
 #bouton {
   background-color: #0065fc;
   color: white;
@@ -119,7 +112,7 @@ header p span {
   border-radius: 50px;
   padding: 13px 15px 13px 15px;
   padding-left: 0px;
-  border-left: solid 1px #deebff;
+  border-left: none;
   margin: 10px;
 }
 header span:hover {
@@ -128,23 +121,15 @@ header span:hover {
 span a {
   padding-left: 7px;
   padding-right: 7px;
-  margin: auto;
-}
-section span strong {
-  font-weight: bold;
-  font-size: 1.1em;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 header .fa {
   color: #0065fc;
   font-size: 1em;
-  border: solid 16px #deebff;
+  border: solid 15px #deebff;
   background-color: #deebff;
   border-radius: 50%;
-  padding-left: 0;
-  margin-left: 0;
+  padding-left: 0px;
 }
 #info {
   color: #0065fc;
@@ -193,13 +178,19 @@ section {
 section h3 {
   margin-top: 20px;
 }
+section span strong {
+  font-weight: bold;
+  font-size: 1.1em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .hotel img {
   width: 230px;
   height: 110px;
   border: solid 5px white;
   border-bottom: solid 80px white;
   border-radius: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .hotel:nth-child(1) {
   order: 4;
@@ -234,7 +225,8 @@ article {
 article span {
   position: absolute;
   bottom: 0;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  font-size: 1.1em;
 }
 
 /*Populaires*/
@@ -245,6 +237,7 @@ article span {
   align-items: center;
   padding-left: 15px;
   padding-right: 30px;
+  margin-bottom: 20px;
 }
 .entete .fas {
   font-size: 1.5em;
@@ -254,10 +247,8 @@ article span {
   height: 600px;
   width: 400px;
   border-radius: 20px;
-  margin: 5px 5px 5px 5px;
+  margin: 0px 5px 30px 5px;
   padding: 30px 20px 30px 20px;
-  margin-top: 0px;
-  margin-bottom: 30px;
 }
 .populaire img {
   height: 130px;
@@ -265,9 +256,7 @@ article span {
   border: solid 5px white;
   border-right: solid 220px white;
   border-radius: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top: 20px;
+  margin: 10px 30px 10px 30px;
 }
 .populaire {
   display: flex;
@@ -280,8 +269,8 @@ article span {
 .populaire p {
   position: absolute;
   top: 0;
-  padding-left: 200px;
-  padding-top: 20px;
+  padding-left: 190px;
+  padding-top: 15px;
 }
 
 /*Activités*/
@@ -290,8 +279,9 @@ article span {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  height: 500px;
+  height: auto;
   width: auto;
+  margin-bottom: 30px;
 }
 .port img {
   height: 400px;
@@ -299,7 +289,7 @@ article span {
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 5px 5px #f2f2f2;
-  margin: 20px 22px 20px 20px;
+  margin: 20px 22px 0px 20px;
 }
 
 .fort img {
@@ -349,7 +339,7 @@ article span {
 .petite h4 {
   position: absolute;
   bottom: 0;
-  padding-left: 35px;
+  padding-left: 40px;
   font-weight: bolder;
 }
 .grande {
@@ -358,8 +348,8 @@ article span {
 .grande h4 {
   position: absolute;
   bottom: 0;
-  padding-bottom: 25px;
-  padding-left: 35px;
+  padding-bottom: 20px;
+  padding-left: 40px;
   font-weight: bolder;
 }
 /*foot{*/
@@ -616,5 +606,9 @@ footer {
     padding: 30px 30px 30px 30px;
     margin: auto;
     height: auto;
+    font-size: 1.4em;
+  }
+  .propos, .hébergements, .assistance {
+    margin-bottom: 30px;
   }
 }
